# statix

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  flake.nix  notes.txt  readme.md  release.txt
.direnv/: flake-profile
.github/: dependabot.yml
.github/workflows/: build.yml  check.yaml  update-flake-lock.yaml
dev-flake/: flake.nix
docs/: architecture.txt  flake-part.nix  notes.txt
flake-parts/: cachix.nix  ci.nix  dependabot.nix  dev-shell.nix  dogfood.nix  files.nix  fmt.nix  git-hooks.nix  git-ignore.nix  license.nix  overlay.nix  rust.nix  statix.nix
lib/: Cargo.toml
lib/src/: lib.rs  lints.rs  make.rs  parse.rs  session.rs  utils.rs
lib/src/lints/: bool_comparison.rs  bool_simplification.rs  collapsible_let_in.rs  deprecated_is_null.rs  deprecated_to_path.rs  empty_inherit.rs  empty_let_in.rs  empty_list_concat.rs  empty_pattern.rs  eta_reduction.rs  faster_groupby.rs  faster_zipattrswith.rs  legacy_let_syntax.rs  lib_first.rs  long_root_pattern.rs  manual_inherit.rs  manual_inherit_from.rs  redundant_pattern_bind.rs  repeated_keys.rs  unquoted_splice.rs  unquoted_uri.rs  useless_has_attr.rs  useless_parens.rs
macros/: Cargo.toml
macros/src/: explain.rs  lib.rs  metadata.rs  test.rs
vfs/: Cargo.toml
vfs/src/: lib.rs
vim-plugin/: flake-part.nix
vim-plugin/ftplugin/: nix.vim
vim-plugin/plugin/: statix.vim
