[workspace]
resolver = "3"

members = ["bin", "lib", "macros", "vfs"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
ariadne = "0.5.1"
clap = "4.1.14"
hex = "0.4.3"
ignore = "0.4.20"
indexmap = "2.11.4"
indoc = "2.0.6"
insta = { features = ["filters"], version = "1.43.2" }
lazy_static = "1.5"
lib.path = "./lib"
macros.path = "./macros"
paste = "1.0.15"
proc-macro2 = "1.0.27"
quote = "1.0"
rayon = "1.11.0"
rnix = "0.12.0"
rowan = "0.16.1"
serde = { features = ["derive"], version = "1.0.228" }
serde_json = { version = "1.0.145" }
sha2 = "0.10.9"
similar = "2.7.0"
strip-ansi-escapes = "0.2.1"
syn = { features = ["full"], version = "2.0" }
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"
vfs.path = "./vfs"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
