[package]
edition = "2018"
license = "MIT"
name = "lib"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
if_chain = "1.0"
lazy_static = "1.5"
macros = { path = "../macros" }
rnix = "0.12.0"
rowan = "0.15.17"
serde_json = { version = "1.0.99", optional = true }

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.130"

[features]
default = []
json-out = ["serde", "serde_json"]

[lints]
workspace = true
