[package]
edition.workspace = true
license.workspace = true
name = "lib"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
if_chain.workspace = true
lazy_static.workspace = true
macros.workspace = true
rnix.workspace = true
rowan.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
json-out = ["serde", "serde_json"]

[lints]
workspace = true
