[package]
name = "macros"
version = "0.0.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0.27"

[dependencies.syn]
version = "1.0"
features = [ "full" ]

[lib]
proc-macro = true

[lints]
workspace = true
