[package]
edition = "2018"
license = "MIT"
name = "macros"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0"

[dependencies.syn]
features = ["full"]
version = "1.0"

[lib]
proc-macro = true

[lints]
workspace = true
